Se añade DB servidor y taba AudiTrail

--- a/WebResumen/appsettings.json
+++ b/WebResumen/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ESSA0538NA\\SQLEXPRESS;Initial Catalog=CiclosAutoclaves;Integrated Security=True"
+    "DefaultConnection": "Data Source=ESSAAPPSERVER01;Initial Catalog=CiclosAutoclaves;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
