Se añade Seguridad Contra Active Directory Group para solo un Rol

--- a/WebResumen/appsettings.json
+++ b/WebResumen/appsettings.json
@@ -10,6 +10,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "SecuritySettings": {
+    "ADGroup": "GLOBAL\\ESSA-HojaResumen_Users" // here is my AD group 
+  }
 
 }
