Se añaden filtros independientes

--- a/WebResumen/appsettings.json
+++ b/WebResumen/appsettings.json
@@ -13,7 +13,9 @@
   "AllowedHosts": "*",
 
   "SecuritySettings": {
-    "ADGroup": "GLOBAL\\ESSA-HojaResumen_Users" // here is my AD group 
+    "ADGroup": "GLOBAL\\ESSA-HojaResumen_Users", // here is my AD group 
+   
+
   }
 
 }
