--- a/WebResumen/appsettings.json
+++ b/WebResumen/appsettings.json
@@ -13,8 +13,10 @@
   "AllowedHosts": "*",
 
   "SecuritySettings": {
-    "ADGroup": "GLOBAL\\ESSA-HojaResumen_Users", // here is my AD group 
-   
+    "ADGroupUsers": "GLOBAL\\ESSA-HojaResumen_Users", // here is my AD group
+    "ADGroupAdmins": "GLOBAL\\ESSA-HojaResumen_Admins",
+    "ADGroupSupervisors":"GLOBAL\\ESSA-HojaResumen_Supervisors"
+
 
   }
 
