--- a/WebResumen/WebResumen.csproj
+++ b/WebResumen/WebResumen.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="wwwroot\img\" />
+    <Folder Include="wwwroot\data\" />
   </ItemGroup>
 
 </Project>
