--- a/WebResumen/WebResumen.csproj
+++ b/WebResumen/WebResumen.csproj
@@ -31,9 +31,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="wwwroot\AngularJSApp\AutoClaveA\Controller.js" />
-    <None Include="wwwroot\AngularJSApp\AutoClaveA\Module.js" />
-    <None Include="wwwroot\AngularJSApp\AutoClaveA\Service.js" />
+    <None Include="wwwroot\js\AngularJSApp\AutoClaveA\Controller.js" />
+    <None Include="wwwroot\js\AngularJSApp\AutoClaveA\Module.js" />
+    <None Include="wwwroot\js\AngularJSApp\AutoClaveA\Service.js" />
   </ItemGroup>
 
 </Project>
