Se añaden fuentes de css y js en carpetas y se modifica inicio con ultimos insertados

--- a/WebResumen/WebResumen.csproj
+++ b/WebResumen/WebResumen.csproj
@@ -27,13 +27,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\lib\AngularJS\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Include="wwwroot\js\AngularJSApp\AutoClaveA\Controller.js" />
     <None Include="wwwroot\js\AngularJSApp\AutoClaveA\Module.js" />
     <None Include="wwwroot\js\AngularJSApp\AutoClaveA\Service.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\css\Datatable\" />
+    <Folder Include="wwwroot\lib\libraries\DatePicker\" />
   </ItemGroup>
 
 </Project>
