Se añaden grupos, dominio, y path desde appsettin.json

--- a/WebResumen/appsettings.json
+++ b/WebResumen/appsettings.json
@@ -12,13 +12,22 @@
   },
   "AllowedHosts": "*",
 
-  "SecuritySettings": {
+  "SecuritySettingsController": {
     "ADGroupUsers": "GLOBAL\\ESSA-HojaResumen_Users", // here is my AD group
     "ADGroupAdmins": "GLOBAL\\ESSA-HojaResumen_Admins",
     "ADGroupSupervisors": "GLOBAL\\ESSA-HojaResumen_Supervisors"
+  },
+
+  "SecuritySettings": {
+    "ADGroupUsers": "ESSA-HojaResumen_Users", // here is my AD group
+    "ADGroupAdmins": "ESSA-HojaResumen_Admins",
+    "ADGroupSupervisors": "ESSA-HojaResumen_Supervisors",
+    "Dominio": "global.baxter.com",
+    "ADPath": "LDAP://global.baxter.com",
+    "PersistKey": "C:\\Users\\SysHojaResumen\\AppData\\Local\\IIS_KeyFolder"
   }
 
 
- 
+
 
 }
