Se cambia la forma de Middleware error, se añade en appsetting la ruta pdf print y logweb se modifica esa ruta en cada controlador y en printAS

--- a/WebResumen/appsettings.json
+++ b/WebResumen/appsettings.json
@@ -14,13 +14,18 @@
 
 
   "SecuritySettings": {
-    "ADGroupUsers": "ESSA-HojaResumen_Users", // here is my AD group
+    "ADGroupUsers": "ESSA-HojaResumen_Users", 
     "ADGroupAdmins": "ESSA-HojaResumen_Admins",
     "ADGroupSupervisors": "ESSA-HojaResumen_Supervisors",
     "Dominio": "global.baxter.com",
     "ADPath": "LDAP://global.baxter.com",
     "PersistKey": "C:\\Users\\SysHojaResumen\\AppData\\Local\\IIS_KeyFolder"
-    
+   
+  },
+
+  "OptionalSettings": {
+    "Pdf": "C:\\Program Files\\HojaResumen\\PDFGenerados",
+    "LogWeb": "C:\\Program Files\\HojaResumen\\LogGenerado"
   }
 
 
