Se cambia todo a español-realizan cambios solicitaos por begoña-cierre de sesion, eliminacion errores, filtro auditrail etc boton logout

--- a/WebResumen/Properties/launchSettings.json
+++ b/WebResumen/Properties/launchSettings.json
@@ -2,6 +2,10 @@
   "iisSettings": {
     "windowsAuthentication": true,
     "anonymousAuthentication": false,
+    "iis": {
+      "applicationUrl": "http://localhost/WebResumen",
+      "sslPort": 0
+    },
     "iisExpress": {
       "applicationUrl": "http://localhost:55654",
       "sslPort": 44336
