Se añade paginacion y filtro para cada autoclave-se limita impresion ciclo 70---se quita la validacion de ontraseña-se valida modelo ip y otros-se modifican vistas de autoclaves para reflexion -en vapor se muestra nueva columna pff2-se modifica impresiones para 2 paginas cuando tiene mas de 25 errores acumulados par todos los ciclos impresion directa y web-se añade en el startup la reflexion

--- a/WebResumen/WebResumen.csproj
+++ b/WebResumen/WebResumen.csproj
@@ -27,6 +27,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
     <PackageReference Include="PdfSharp" Version="1.51.5185-beta" />
+    <PackageReference Include="ReflectionIT.Mvc.Paging" Version="3.1.0" />
     <PackageReference Include="System.DirectoryServices" Version="5.0.0" />
     <PackageReference Include="System.DirectoryServices.AccountManagement" Version="5.0.0" />
   </ItemGroup>
