Ultimo cambio, impresiones mejoradas, clean code y exceso de codigo-ademas se añade url log dsd config

--- a/WebResumen/appsettings.json
+++ b/WebResumen/appsettings.json
@@ -14,19 +14,25 @@
 
 
   "SecuritySettings": {
-    "ADGroupUsers": "ESSA-HojaResumen_Users", 
+    "ADGroupUsers": "ESSA-HojaResumen_Users",
     "ADGroupAdmins": "ESSA-HojaResumen_Admins",
     "ADGroupSupervisors": "ESSA-HojaResumen_Supervisors",
     "Dominio": "global.baxter.com",
     "ADPath": "LDAP://global.baxter.com",
     "PersistKey": "C:\\Users\\SysHojaResumen\\AppData\\Local\\IIS_KeyFolder"
-   
+
   },
 
   "OptionalSettings": {
     "Pdf": "C:\\Program Files\\HojaResumen\\PDFGenerados",
     "LogWeb": "C:\\Program Files\\HojaResumen\\LogGenerado"
+  },
+
+  "CiclosPath": {
+    "Path": "https://essahojaresumen.global.baxter.com/LOGFiles/"
   }
+
+
 
 
 
