Cambios Oq-PQ- impresiones_version_layout_Autoclaves AGua dia despues_refresh 1minuto_IdleTime

--- a/WebResumen/appsettings.json
+++ b/WebResumen/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ESSAAPPSERVER01;Initial Catalog=CiclosAutoclaves;Integrated Security=True"
+    "DefaultConnection": "Data Source=ESSAAPPDESA01;Initial Catalog=CiclosAutoclavesDESA;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
@@ -14,12 +14,13 @@
 
 
   "SecuritySettings": {
-    "ADGroupUsers": "ESSA-HojaResumen_Users",
-    "ADGroupAdmins": "ESSA-HojaResumen_Admins",
-    "ADGroupSupervisors": "ESSA-HojaResumen_Supervisors",
+    "ADGroupUsers": "ESSA-HojaResumen_Users_DESA",
+    "ADGroupAdmins": "ESSA-HojaResumen_Admins_DESA",
+    "ADGroupSupervisors": "ESSA-HojaResumen_Supervisors_DESA",
     "Dominio": "global.baxter.com",
     "ADPath": "LDAP://global.baxter.com",
-    "PersistKey": "C:\\Users\\SysHojaResumen\\AppData\\Local\\IIS_KeyFolder"
+    "PersistKey": "C:\\Users\\SysHojaResumen\\AppData\\Local\\IIS_KeyFolder",
+    "IdleTime":600
 
   },
 
